--- a/beta/resources/locales/translation.yml
+++ b/beta/resources/locales/translation.yml
@@ -283,7 +283,7 @@ FR:
                 name: The Joker.
                 quote: If you are good at something, don't do it for free.
             apple:
-                title: Apple devices
+                title: Apple
                 name: Steve Jobs.
                 quote: Details matter, it’s worth waiting to get it right.
             assassin-creed:
