--- a/resources/locales/translation.yml
+++ b/resources/locales/translation.yml
@@ -16,7 +16,7 @@ EN:
         title: Creative. Developer. Innovator.
     Profile:
         title: Profile
-        description: Hello my name is Michel Kansou currently a student in third year of an engineering programme at eXia.CESI Arras. I enjoy keeping abreast of the latest programming language, virtual reality and video games technology. Dynamic, I like learning new things and I am involved in my projects (whether independently or in groups). This site allows me to show my various achievements and make dispotion a contact form for people interested in my services in the Mobile and Web Development.
+        description: Hello my name is Michel Kansou currently a student in third year of an engineering programme at eXia.CESI Arras. I enjoy keeping abreast of the latest programming language, virtual reality and video games technology. Dynamic, I like learning new things and I am involved in my projects (whether independently or in groups). This site allows me to show my various achievements in the Mobile and Web Development.
         downloadCV: Download My Resume
     Skills:
         title: Skills
@@ -173,7 +173,7 @@ FR:
         title: Développeur. Créatif. Innovateur.
     Profile:
         title: À Propos
-        description: Actuellement étudiant en 3éme année Cycle d'ingénieur informatique à l'eXia.CESI Arras. Je suis passionné par la programmation, réalité virtuel et jeux vidéo. Dynamique, j'aime apprendre de nouvelles choses et je suis impliqué dans mes différents projets (que cela soit en autonomie ou en groupe). Ce site me permet de montrer mes différentes réalisations et de mettre à dispotion un formulaire de contact pour les personnes intéréssées par mes prestations dans le développement Mobile ou Web.
+        description: Actuellement étudiant en 3éme année Cycle d'ingénieur informatique à l'eXia.CESI Arras. Je suis passionné par la programmation, réalité virtuel et jeux vidéo. Dynamique, j'aime apprendre de nouvelles choses et je suis impliqué dans mes différents projets (que cela soit en autonomie ou en groupe). Ce site me permet de montrer mes différentes réalisations dans le développement Mobile ou Web.
         downloadCV: Télécharger mon CV
     Skills:
         title: Compétences
