--- a/resources/locales/EN-en.yml
+++ b/resources/locales/EN-en.yml
@@ -11,7 +11,7 @@ Navigation:
     english: English
     french: Français
 Presentation:
-    hello: I'm, Michel Kansou
+    hello: Hi, I'm Michel Kansou
     title: Creative. Developer. Innovator.
 Profile:
     title: Profile
