--- a/resources/locales/EN-en.yml
+++ b/resources/locales/EN-en.yml
@@ -15,7 +15,7 @@ Presentation:
     title: Creative. Developer. Innovator.
 Profile:
     title: Profile
-    description: Hello my name is Michel Kansou currently a student in third year of an engineering programme at eXia.CESI Arras. I enjoy keeping abreast of the latest programming language, virtual reality and video games technology. Dynamic, I like learning new things and I am involved in my projects (whether independently or in groups). This site allows me to show my various achievements in the Mobile and Web Development.
+    description: Hello my name is Michel Kansou currently a student in fourth year of an engineering programme at eXia.CESI Arras. I enjoy keeping abreast of the latest programming language, virtual reality and video games technology. Dynamic, I like learning new things and I am involved in my projects (whether independently or in groups). This site allows me to show my various achievements in the Mobile and Web Development.
     downloadCV: Download My Resume
     cvUrl: resources/CV/Michel Kansou CV-EN.pdf
 Skills:
