--- a/resources/locales/EN-en.json
+++ b/resources/locales/EN-en.json
@@ -13,7 +13,7 @@
   },
   "presentation": {
     "hello": "Hello, my name is Michel Kansou",
-    "title": "Software developer."
+    "title": "Software developer"
   },
   "profile": {
     "title": "About Me",
